--- a/.github/workflows/.appveyor.yml
+++ b/.github/workflows/.appveyor.yml
@@ -6,7 +6,8 @@ branches:
   only:
     - main  # ветка git
 
-build: off  # будем использовать свой скрипт сборки
+build: build_script:
+  - ./gradlew test --info -Dselenide.headless=true  # будем использовать свой скрипт сборки
 
 install:
   # запускаем SUT (& означает, что в фоновом режиме не блокируем терминал для запуска тестов)
