--- a/.github/workflows/.appveyor.yml
+++ b/.github/workflows/.appveyor.yml
@@ -6,13 +6,11 @@ branches:
   only:
     - main  # ветка git
 
-build: build_script:
-  - ./gradlew test --info -Dselenide.headless=true  # будем использовать свой скрипт сборки
+build: off  # будем использовать свой скрипт сборки
 
 install:
   # запускаем SUT (& означает, что в фоновом режиме не блокируем терминал для запуска тестов)
   - java -jar ./artifacts/app-order.jar &
 
 build_script:
-  - chmod +x gradlew
-  - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
+  - ./gradlew test --info -Dselenide.headless=true
